# mlx_create_c

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mlx_create_c/: __init__.py  _mlx_create_c.c  mlx_create_c.c  mlx_create_c.h
test/: error_handling_routines.py  test_creation_operator.py  test_inv_occ_mat.py  test_mapmat.py  test_number_state_indexing.py
